SAK-10119 http://bugs.sakaiproject.org/jira/browse/SAK-10119 Buttons on Gradebook Item Summary screen are not labeled or aligned as specified in documentation
git-svn-id: https://source.sakaiproject.org/svn/gradebook/trunk@31133 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/gradebook/app/ui/src/webapp/css/gradebook.css
+++ b/gradebook/app/ui/src/webapp/css/gradebook.css
@@ -148,3 +148,9 @@ td.gbMessageAboveNumber {vertical-align:top; text-align:right; padding-right:2em
 	padding-left: 1.2em;
 }
 
+.gbButtonBar {
+	float: right;
+	text-align: right;
+	margin-right: 1.0em;
+}
+
